k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluckin-bell-dev
  labels:
    app.kubernetes.io/name: cluckin-bell
    app.kubernetes.io/environment: dev
