k8s/dev/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wingman-api
  namespace: cluckin-bell-dev
  labels:
    app: wingman-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wingman-api
  template:
    metadata:
      labels:
        app: wingman-api
    spec:
      serviceAccountName: wingman-api
      containers:
        - name: api
          image: <ACCOUNT_ID>.dkr.ecr.<REGION>.amazonaws.com/<API_ECR_REPOSITORY>:<IMAGE_TAG>
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
