k8s/dev/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drumstick-web
  namespace: cluckin-bell-dev
  labels:
    app: drumstick-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: drumstick-web
  template:
    metadata:
      labels:
        app: drumstick-web
    spec:
      serviceAccountName: drumstick-web
      containers:
        - name: web
          image: 264765154707.dkr.ecr.us-east-1.amazonaws.com/cluckin-bell-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: env-config
              mountPath: /usr/share/nginx/html/env.js
              subPath: env.js
      volumes:
        - name: env-config
          configMap:
            name: cluckin-bell-env-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wingman-api
  namespace: cluckin-bell-dev
  labels:
    app: wingman-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wingman-api
  template:
    metadata:
      labels:
        app: wingman-api
    spec:
      serviceAccountName: wingman-api
      containers:
        - name: api
          image: 264765154707.dkr.ecr.us-east-1.amazonaws.com/wingman-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
