k8s/dev/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: wingman-api
  namespace: cluckin-bell-dev
spec:
  type: ClusterIP
  selector:
    app: wingman-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
