k8s/dev/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: drumstick-web
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: drumstick-web
  ports:
    - name: http
      port: 80
      targetPort: 80
