k8s/dev/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wingman-api
  namespace: cluckin-bell-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: api.dev.cluckin-bell.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wingman-api
                port:
                  number: 8080
