k8s/dev/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drumstick-web
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: dev.cluckin-bell.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drumstick-web
                port:
                  number: 80
